--- a/public/css/formulario2.css
+++ b/public/css/formulario2.css
@@ -33,7 +33,7 @@ body {
 }
 
 .text-container .bottom-text {
-    color: #e80a0a; /* Color del texto en rojo */
+    color: #0b283f; /* Color del texto en rojo */
     font-size: 1.5em; /* Ajusta el tamaño según sea necesario */
 }
 
