--- a/public/css/formularios.css
+++ b/public/css/formularios.css
@@ -96,7 +96,7 @@ body {
 
 /* Estilo para el botón de envío */
 .submit-btn {
-    background-color: #e80a0a;
+    background-color: #0b283f;
     color: #ffffff;
     border: none;
     border-radius: 5px;
